# Wanderon

./: .gitignore  README.md  index.html  package-lock.json  package.json  run_backend_only.bat  run_backend_only.sh  run_dev.py  setup.py
.github/workflows/: build.yml
backend/: bot.py  db.py  llm.py  main.py  planner.py  requirements.txt  search.py  security.py  travel_data.py
src/: backend.js  main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/pages/: about.js  dashboard.js  settings.js  trips.js
